# laneDetector

./: .travis.yml  CMakeLists.txt  LICENSE  readme.md  valgrind_output
app/: CMakeLists.txt  demo.cpp  imageProcessor.cpp  laneDetector.cpp  lanes.cpp  main.cpp
docs/: config
docs/html/: annotated.html  classes.html  classimageProcessor-members.html  classimageProcessor.html  classimageProcessor__inherit__graph.map  classimageProcessor__inherit__graph.md5  classlanes-members.html  classlanes.html  classlanes__coll__graph.map  classlanes__coll__graph.md5  demo_8cpp.html  demo_8cpp__incl.map  demo_8cpp__incl.md5  dir_000000_000001.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  imageProcessor_8cpp.html  imageProcessor_8cpp__incl.map  imageProcessor_8cpp__incl.md5  imageProcessor_8hpp.html  imageProcessor_8hpp__dep__incl.map  imageProcessor_8hpp__dep__incl.md5  imageProcessor_8hpp__incl.map  imageProcessor_8hpp__incl.md5  imageProcessor_8hpp_source.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  lanes_8cpp.html  lanes_8cpp__incl.map  lanes_8cpp__incl.md5  lanes_8hpp.html  (+5 more)
docs/latex/: annotated.tex  classimageProcessor.tex  classlanes.tex  demo_8cpp.tex  (+18 more)
include/: imageProcessor.hpp  laneDetector.hpp  lanes.hpp
results/: cppcheck_output  cppcheck_output_post_Gmock.txt  cpplint_output  cpplint_output_post_Gmock.txt
test/: CMakeLists.txt  main.cpp  mockImageProcessor.cpp  test.cpp
(+18 files in other folders)
